--- a/app/src/main/res/layout/activity_capture_image.xml
+++ b/app/src/main/res/layout/activity_capture_image.xml
@@ -42,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="80dp"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <!-- Chathead Image (Tooltip) -->
         <ImageView
