--- a/app/src/main/res/layout/activity_meat_description.xml
+++ b/app/src/main/res/layout/activity_meat_description.xml
@@ -59,14 +59,14 @@
                 android:id="@+id/meatImageLayout"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:gravity="center"
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/meatImageView"
+                    android:id="@+id/captureImageView"
                     android:layout_height="match_parent"
-                    android:layout_width="300dp"
-                    android:adjustViewBounds="true"
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginRight="50dp"
                     android:scaleType="fitXY"/>
 
             </LinearLayout>
