--- a/app/src/main/res/layout/activity_v2_history_details.xml
+++ b/app/src/main/res/layout/activity_v2_history_details.xml
@@ -58,8 +58,7 @@
                 android:id="@+id/meatImageLayout"
                 android:layout_width="match_parent"
                 android:layout_height="400dp"
-                android:layout_weight="1"
-                android:gravity="center">
+                android:orientation="vertical">
 
                 <ImageView
                     android:id="@+id/meatImageView"
@@ -67,8 +66,7 @@
                     android:layout_width="match_parent"
                     android:layout_marginLeft="50dp"
                     android:layout_marginRight="50dp"
-                    android:scaleType="centerCrop"
-                    />
+                    android:scaleType="fitXY"/>
 
             </LinearLayout>
 
